# minmax

./: pyproject.toml
minmax/: crosszero.py  estimate.py  main.py  point.py
tests/: test_crosszero.py
